k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dhcp-flow
  labels:
    name: dhcp-flow
